--- a/dbz/vegeta.html
+++ b/dbz/vegeta.html
@@ -6,8 +6,7 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>My First Page for DBZ</h1>
-    <a href="goku.html"><li>Link to Goku Page</li></a>
-    <a href="vegeta.html"><li>Link to Vegeta Page</li></a>
+    <h1>Vegeta</h1>
+    <a href="index.html"><li>Link to Index</li></a>
   </body>
 </html>
