styled index and created css files for goku and vegeta

--- a/dbz/vegeta.html
+++ b/dbz/vegeta.html
@@ -6,7 +6,7 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>Vegeta</h1>
+    <h1>3rd Page About Vegeta</h1>
     <a href="index.html"><li>Link to Index</li></a>
   </body>
 </html>
