--- a/dbz/index.html
+++ b/dbz/index.html
@@ -3,11 +3,22 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="index.css" />
     <title>Document</title>
   </head>
   <body>
-    <h1>My First Page for DBZ</h1>
-    <a href="goku.html"><li>Link to Goku Page</li></a>
-    <a href="vegeta.html"><li>Link to Vegeta Page</li></a>
+    <h1 class="linkWrap">My First Page for DBZ</h1>
+    <div class="links">
+      <a href="goku.html"
+        ><ul>
+          Link to Goku Page
+        </ul></a
+      >
+      <a href="vegeta.html"
+        ><ul>
+          Link to Vegeta Page
+        </ul></a
+      >
+    </div>
   </body>
 </html>
